# CompactSTL

./: .clang-format  CMakeLists.txt  test.cpp  test1.cpp
include/: Pair.hpp  SharedPtr.hpp  Tuple.hpp  UniquePtr.hpp  array.hpp  expression_template.hpp  function.hpp  future.hpp  header.h  iterator.hpp  promise.hpp  share_state.hpp  someFunctionality.hpp  vector.hpp
src/: Pair.cpp  SharedPtr.cpp  Tuple.cpp  UniquePtr.cpp  a.c  iterator.hpp  main.cpp  someFunctionality.cpp  test.cpp  vector.cpp
test/: CMakeLists.txt  expression_template.cpp  function.cpp  test_Pair.cpp  test_SharedPtr.cpp  test_Tuple.cpp  test_UniquePtr.cpp  test_vector.cpp  vector_test.cpp
